Fix misalignment of footer with restart button

--- a/frontend/public/stylesheets/footer.css
+++ b/frontend/public/stylesheets/footer.css
@@ -1,6 +1,6 @@
 .footer {
     background: #d0d0d0;
-    height: 40px;
+    height: 46px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
